--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@popperjs/core": "^2.11.0",
     "bootstrap": "^5.1.3",
     "ngx-bootstrap": "^7.1.0",
+    "ngx-pagination": "^5.1.1",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
